--- a/chessgame/mainwindow.ui
+++ b/chessgame/mainwindow.ui
@@ -178,6 +178,25 @@
      <string>15</string>
     </property>
    </widget>
+   <widget class="QLabel" name="NetplayerLabel">
+    <property name="geometry">
+     <rect>
+      <x>880</x>
+      <y>430</y>
+      <width>241</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>楷体</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>执白棋，后落子</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
